Refactor App