@@ -1,11 +1,15 @@
 package com.cosium.vet;
 
+import com.cosium.vet.command.CompositeCommandArgParser;
+import com.cosium.vet.command.DebugOptions;
+import com.cosium.vet.command.VetCommandArgParser;
 import com.cosium.vet.gerrit.DefaultGerritClientFactory;
 import com.cosium.vet.gerrit.GerritClientFactory;
 import com.cosium.vet.gerrit.PatchSetSubject;
 import com.cosium.vet.git.BranchShortName;
 import com.cosium.vet.git.GitProvider;
-import com.cosium.vet.help.HelpCommand;
+import com.cosium.vet.log.Logger;
+import com.cosium.vet.log.LoggerFactory;
 import com.cosium.vet.push.PushCommand;
 import com.cosium.vet.push.PushCommandArgParser;
 import com.cosium.vet.push.PushCommandFactory;
@@ -13,8 +17,6 @@ import com.cosium.vet.runtime.*;
 
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import static java.util.Objects.requireNonNull;
@@ -26,19 +28,47 @@ import static java.util.Objects.requireNonNull;
  */
 public class Vet {
 
+  private static final Logger LOG = LoggerFactory.getLogger(Vet.class);
   private static final String APP_NAME = "vet";
 
   private final PushCommandFactory pushCommandFactory;
-  private final List<VetCommandArgParser> commandParsers;
-  private final VetCommandArgParser helpCommandParser;
+  private final VetCommandArgParser commandParser;
 
+  /**
+   * @param interactive True if interactive mode (human interaction) should be enabled. False
+   *     otherwise.
+   */
   public Vet(boolean interactive) {
-    this(Paths.get(System.getProperty("user.dir")), new BasicCommandRunner(), interactive);
+    this(interactive, DebugOptions.empty());
   }
 
-  public Vet(Path workingDir, CommandRunner commandRunner, boolean interactive) {
+  /**
+   * @param interactive True if interactive mode (human interaction) should be enabled. False
+   *     otherwise.
+   * @param debugOptions The debug options to use
+   */
+  public Vet(boolean interactive, DebugOptions debugOptions) {
+    this(
+        Paths.get(System.getProperty("user.dir")),
+        new BasicCommandRunner(),
+        interactive,
+        debugOptions);
+  }
+
+  /**
+   * @param workingDir The working directory
+   * @param commandRunner The command runner
+   * @param interactive True if interactive mode (human interaction) should be enabled. False
+   *     otherwise.
+   */
+  public Vet(
+      Path workingDir,
+      CommandRunner commandRunner,
+      boolean interactive,
+      DebugOptions debugOptions) {
     requireNonNull(workingDir);
     requireNonNull(commandRunner);
+    requireNonNull(debugOptions);
 
     UserInput userInput;
     if (interactive) {
@@ -51,31 +81,23 @@ public class Vet {
     GerritClientFactory gerritClientFactory =
         new DefaultGerritClientFactory(gitProvider, gitProvider);
     this.pushCommandFactory = new PushCommand.Factory(gitProvider, gerritClientFactory, userInput);
-
-    List<VetCommandArgParser> nonHelpParsers =
-        List.of(new PushCommandArgParser(pushCommandFactory));
-    this.helpCommandParser = new HelpCommand.ArgParser(APP_NAME, nonHelpParsers);
-    List<VetCommandArgParser> parsers = new ArrayList<>();
-    parsers.add(helpCommandParser);
-    parsers.addAll(nonHelpParsers);
-    this.commandParsers = Collections.unmodifiableList(parsers);
+    this.commandParser =
+        new CompositeCommandArgParser(
+            APP_NAME, List.of(new PushCommandArgParser(pushCommandFactory)), debugOptions);
   }
 
+  /** @return True on success, false on failure. */
   public void run(String args[]) {
-    commandParsers
-        .stream()
-        .filter(p -> p.canParse(args))
-        .findFirst()
-        .orElse(helpCommandParser)
-        .parse(args)
-        .execute();
+    commandParser.parse(args).execute();
   }
 
+  /**
+   * Executes the push command.
+   *
+   * @param targetBranch The optional target branch
+   * @param patchSetSubject The optional patch set subject
+   */
   public void push(BranchShortName targetBranch, PatchSetSubject patchSetSubject) {
     pushCommandFactory.build(targetBranch, patchSetSubject).execute();
-  }
-
-  public void help(String commandToDescribe) {
-    new HelpCommand(APP_NAME, commandParsers, commandToDescribe).execute();
   }
 }
